--- a/wp-content/themes/cmp/assets/styles/modules/_global.scss
+++ b/wp-content/themes/cmp/assets/styles/modules/_global.scss
@@ -277,10 +277,10 @@ nav.navigation.posts-navigation {
   padding: 0 2em;
 
   h1 {
-    border-top: 1px solid #CCC;
     width: 100%;
     font-weight: 400;
     padding-top: $small-spacing;
+    margin-bottom: $base-spacing;
   }
 }
 
