--- a/wp-content/themes/cmp/assets/styles/modules/_hero.scss
+++ b/wp-content/themes/cmp/assets/styles/modules/_hero.scss
@@ -1,6 +1,6 @@
 .hero-header {
     height: 500px;
-    margin: auto $base-spacing;
+    margin: 0 $base-spacing;
     margin-bottom: 5px;
     background-size:cover;
     background-position: center center;
